# nevbot

./: .breakpoints  Host.py  README.md  language.py  main.py  pyproject.toml  regex-examples.py  requirements.txt  token.env
Other/: README.md  hoi.py  milestones  phrase.py  supplementary
cogs/: casino.py  chat.py  errorhandler.py  events.py  games.py  greet.py  hoiC.py  music.py  teams_rando.py  wordle.py
