[tool.poetry]
name = "repl_python3_nevbot"
version = "0.1.0"
description = "ABC"
authors = ["NiamhGowran <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
python-dotenv = "^0.19.2"
youtube_dl = "^2021.12.17"
Flask = "^2.0.2"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
